build: update minimum required IJ version to 2022.3
Signed-off-by: Fred Bricon <fbricon@gmail.com>